fix EventService